@@ -1,6 +1,5 @@
 for index, force in pairs(game.forces) do
     local technologies = force.technologies
-    local recipes = force.recipes
 
     if technologies["logistic-system"].researched then
         technologies["pm-requester-chest-inventory-bonus-capacity-1"].researched = true
